--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1517,6 +1517,7 @@ background: -ms-linear-gradient(left, rgba(229,247,255,0) 0%, rgba(229,247,255,1
 background: linear-gradient(to right, rgba(229,247,255,0) 0%, rgba(229,247,255,1) 50%, rgba(229,247,255,1) 100%);
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e5f7ff', endColorstr='#e5f7ff', GradientType=1 );
     display: block!important;
+    z-index: 9999;
 }
 
 .subpuntTitle.span12 .span1 {
@@ -1554,3 +1555,46 @@ span.estatpunt {
 .template-edit.portaltype-genweb-organs-sessio li.formTab.lastFormTab {
     display: none!important;
 }
+
+
+
+.bodyPresentation .modal{
+  position:absolute;
+  top:50% !important;
+  transform: translate(0, -50%) !important;
+  -ms-transform: translate(0, -50%) !important;
+  -webkit-transform: translate(0, -50%) !important;
+  margin:auto 5%!important;
+  width:90%;
+  left:0!important;
+  height:80%;
+  z-index: 99999;
+  overflow: hidden!important;
+  background-color: white!important;
+
+}
+.bodyPresentation .modal-content {
+  min-height:100%!important;
+   overflow: hidden!important;
+  position:absolute;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0; 
+}
+.bodyPresentation .modal-body {
+  position:absolute;
+  top:53px; // height of header
+  bottom:45px;  // height of footer
+  left:0;
+  right:0;
+  overflow-y: auto;
+  max-height: 82%!important;
+}
+.bodyPresentation .modal-footer {
+  position:absolute;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
