added class to session table in incognito mode

--- a/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -199,7 +199,7 @@ span.proposalNumberSubpunt {
     border-color: black;
 }
 
-.ui-state-grey {
+.ui-state-grey, .ui-state-grey-not_move {
     border: 1px solid #eee;
     position: relative;
     font-weight: normal;
